--- a/TareaAPI/Dockerfile
+++ b/TareaAPI/Dockerfile
@@ -7,6 +7,7 @@ WORKDIR /opt/app
 # Copy package.json and package-lock.json to the working directory
 COPY package*.json ./
 
+RUN npm install jest
 # Install dependencies
 RUN npm install
 
@@ -17,4 +18,4 @@ COPY . .
 EXPOSE 3000
 
 # Define the command to run your application
-CMD ["node", "app.js"]
+CMD ["npm", "start"]
